Closed Bug 1688127 Opened 5 years ago Closed 5 years ago

WARNING: NS_ENSURE_TRUE(browsingContext->IsContentSubframe()) failed: file dom/base/Document.cpp:3704 on every crashtest

Categories

(Core :: DOM: Security, defect)

defect

Tracking

()

RESOLVED FIXED
86 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox84 --- unaffected
firefox85 --- unaffected
firefox86 --- fixed

People

(Reporter: tnikkel, Assigned: tnikkel)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Maybe only because I was running fission crashtests?

Assignee: nobody → tnikkel
Status: NEW → ASSIGNED
Pushed by tnikkel@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6f1ab62b59a6 Fix warning spam in Document::GetParentFeaturePolicy. r=smaug

Set release status flags based on info from the regressing bug 1612147

Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: