Bug 1688127. Fix warning spam in Document::GetParentFeaturePolicy. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D102690